# backpack

./: .gitignore  Cargo.toml  docker-compose.yml  readme.md  tech_debt.md  tech_notes.md
.cargo/: config.toml
.github/: FUNDING.yml
.github/workflows/: audit.yml  example_game_lazy_release.yml  general.yml  server-release.yml
Docs/: Backpack.drawio
crates/backpack-bevy-admin/: Cargo.toml
crates/backpack-bevy-admin/src/: main.rs
crates/backpack-server/: .env.template  Cargo.toml  configuration.dhall  configuration_types.dhall
crates/backpack-server/docs/: database.md  openapi3_0.yaml  sequence.md
crates/backpack-server/docs/openapi/: openapi3_0.yaml  user_openapi.yaml
crates/backpack-server/migrations/: 20221206211832_create_users_table.sql  20221206212231_create_users_github_table.sql  20221206214203_create_users_items_table.sql  20221211203711_create_apps.sql  20221211203930_create_app_admin.sql  20221230212211_create_users_email_password.sql
crates/backpack-server/scripts/: init_db.sh  reset_db.sh
crates/backpack-server/src/: auth_user.rs  biscuit.rs  configuration.rs  lib.rs  main.rs
crates/backpack-server/src/domains/: app.rs  app_admin.rs  item.rs  mod.rs  oauth.rs  oauth_email_password.rs  oauth_fake.rs  oauth_github.rs  user.rs  user_github.rs  user_item.rs
crates/backpack-server/src/models/: app.rs  app_admin.rs  app_item.rs  email_password.rs  item.rs  mod.rs  oauth_github.rs  user.rs  user_item.rs
crates/backpack-server/src/routes/: admin.rs  app.rs  email_password.rs  item.rs  mod.rs  oauth.rs  oauth_fake.rs  user_item.rs
crates/backpack-server/src/routes/admin/: app.rs  item.rs
crates/backpack-server/src/routes/authenticated/: app.rs  item.rs  mod.rs  user.rs  user_item.rs  whoami.rs
crates/backpack-server/src/routes/unauthenticated/: email_password.rs  health_check.rs  mod.rs
crates/backpack-server/static/: .gitignore
crates/backpack-server/tests/: helper.rs  user.rs
crates/backpack-ui/: Cargo.toml
crates/backpack-ui/src/: data.rs  main.rs
crates/client/: Cargo.toml
crates/client/src/: lib.rs
crates/client_bevy/: Cargo.toml
crates/client_bevy/src/: lib.rs
crates/client_bevy_egui/: Cargo.toml
crates/client_bevy_egui/src/: lib.rs
crates/example-game-lazy/: .env.template  Cargo.toml
crates/example-game-lazy/src/: backpack_client.rs  backpack_client_bevy.rs  data.rs  game.rs  main.rs  password.rs
crates/example-game-lazy/src/game/: collisions.rs  mod.rs  scoring.rs  ui_endscreen.rs  ui_playing.rs  ui_warmup.rs
crates/example-game-lazy/src/game/scoreboard/: mod.rs
crates/example-game-lazy/src/utils/: mouse.rs
crates/example_game_lazy/: .env.template  .gitignore  Cargo.toml
crates/example_game_lazy/doc/: game_design.md
crates/example_game_lazy/scripts/: build_wasm.sh  run_wasm.sh  static-web-server.toml
crates/example_game_lazy/src/: backpack_client.rs  backpack_client_bevy.rs  data.rs  main.rs  password.rs
crates/example_game_lazy/src/game/: collisions.rs  mod.rs  scoring.rs  ui_endscreen.rs  ui_playing.rs  ui_warmup.rs
crates/example_game_lazy/src/game/scoreboard/: mod.rs
crates/example_game_lazy/src/ui/: mod.rs
crates/example_game_lazy/src/utils/: mod.rs  mouse.rs
crates/example_game_lazy/wasm/: index.html
crates/example_game_lazy_simple/: Cargo.toml
crates/example_game_lazy_simple/src/: main.rs
crates/particles/: Cargo.toml
crates/particles/src/: lib.rs
crates/server/: $test_databases_file  .env.template  .gitignore  Cargo.toml  configuration_types.dhall  sqlx-data.json
crates/server/docs/: database.md  openapi3_0.yaml  sequence.md
crates/server/migrations/: 20221206211832_create_users_table.sql  20221206212231_create_users_github_table.down.sql  20221206212231_create_users_github_table.up.sql  20221206213840_create_items_table.down.sql  20221206213840_create_items_table.up.sql  20221206214203_create_users_items_table.down.sql  20221206214203_create_users_items_table.up.sql  20221211203711_create_apps.down.sql  20221211203930_create_app_admin.down.sql  20221211204034_alter_item_owner.down.sql  20221211204034_alter_item_owner.up.sql  20221211204458_create_apps_items.down.sql  20221211204458_create_apps_items.sql  20221211204458_create_apps_items.up.sql  20221230212211_create_users_email_password.down.sql  20221230212211_create_users_email_password.sql  20221230212211_create_users_email_password.up.sql  20230330212211_alter_users_email_password_cascade.down.sql  20230330212211_alter_users_email_password_cascade.up.sql  20230810101939_create_refresh_tokens.down.sql  20230810101939_create_refresh_tokens.up.sql
crates/server/scripts/: drop_test_dbs.sh  migrate_db.sh  prod_migrate_db.sh  reset_db.sh  verify_requirements.sh
crates/server/src/: auth_user.rs  biscuit.rs  configuration.rs  lib.rs  main.rs  models.rs  routes.rs  telemetry.rs  time.rs
crates/server/src/models/: app.rs  email_password.rs  item.rs  oauth_github.rs  refresh_token.rs  user.rs  user_github.rs  user_item.rs
crates/server/src/routes/: authentication.rs  oauth.rs  unauthenticated.rs
crates/server/src/routes/admin/: app.rs  item.rs
crates/server/src/routes/authenticated/: app.rs  item.rs  user.rs  whoami.rs
crates/server/src/routes/authentication/: auth.rs  email_password.rs
crates/server/src/routes/unauthenticated/: email_password.rs  health_check.rs
crates/server/tests/: helper.rs  user.rs
crates/shared/src/: lib.rs
crates/test_ui/: Cargo.toml  Trunk.toml  build.rs  index.html  rust-toolchain.toml  rustfmt.toml
crates/test_ui/src/: app.rs  error.rs  main.rs
crates/test_ui/src/components/: footer.rs  list_errors.rs  mod.rs  nav.rs  user_context_provider.rs
crates/test_ui/src/hooks/: mod.rs  use_user_context.rs
crates/test_ui/src/routes/: login.rs  mod.rs  profile.rs  register.rs  settings.rs
crates/test_ui/src/routes/home/: main_view.rs  mod.rs
crates/test_ui/src/services/: auth.rs  mod.rs  profiles.rs  requests.rs
crates/test_ui/src/styles/: index.scss
crates/test_ui/src/types/: auth.rs  mod.rs
