[package]
edition = "2021"
name    = "backpack-bevy-admin"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy       = "0.9"
bevy_egui  = "0.18"
dotenv     = "0.15"
lettre     = "0.10"
open       = "3"
reqwest    = { version = "0.11", features = ["json"] }
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# system_uri = {git = "https://github.com/Vrixyz/system_uri.git", default-features = false}

# To use with https://github.com/burtonageo/cargo-bundle
[package.metadata.bundle]
category = "Developer Tool"
copyright = "Copyright (c) Thierry Berger 2023. All rights reserved."
deb_depends = []
icon = ["32x32.png", "128x128.png", "128x128@2x.png"]
identifier = "com.thierryberger.backpackadminui"
long_description = """
User interface to connect as administrator to backpack.
See https://github.com/Vrixyz/backpack.
"""
name = "Backpack Admin"
osx_frameworks = []
osx_url_schemes = ["com.thierryberger.backpackadminui"]
resources = ["assets", "images/**/*.png", "secrets/public_key.txt"]
short_description = "Backpack Admin UI."
version = "1.0.0"
