[package]
name = "backpack-bevy-admin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bevy_egui = { git = "https://github.com/DGriffin91/bevy_egui.git", branch = "bevy_main" }
open = "3"
dotenvy = "0.15"
# system_uri = {git = "https://github.com/Vrixyz/system_uri.git", default-features = false}


# To use with https://github.com/burtonageo/cargo-bundle
[package.metadata.bundle]
name = "Backpack Admin"
identifier = "com.thierryberger.backpackadminui"
icon = ["32x32.png", "128x128.png", "128x128@2x.png"]
version = "1.0.0"
resources = ["assets", "images/**/*.png", "secrets/public_key.txt"]
copyright = "Copyright (c) Thierry Berger 2023. All rights reserved."
category = "Developer Tool"
short_description = "Backpack Admin UI."
long_description = """
User interface to connect as administrator to backpack.
See https://github.com/Vrixyz/backpack.
"""
deb_depends = []
osx_frameworks = []
osx_url_schemes = ["com.thierryberger.backpackadminui"]
