[package]
name = "backpack-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "postgres" ] }
tokio = { version = "1", features = ["full"] }
actix-web = "4.1"
actix-cors = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_dhall = "0.12"
reqwest = { version = "0.11", features = ["json"] }
biscuit-auth = "2.2"
uuid = { version = "1.1", features = ["v4", "serde"] }
base64 = "0.13"
rand = "0.8"
dotenv = "0.15.0"