[package]
name = "backpack_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ehttp = { version = "*", features = ["native-async"] }
shared = { path = "../shared" }
serde_json = "1"
serde = "1"
thiserror = "1.0"
futures = "0.3"
