[package]
name = "backpack_client_bevy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11"
backpack_client = { path = "../client" }
shared = { path = "../shared" }
futures = "*"
async-lock = "2.8.0"
