[package]
name = "backpack_client_bevy_egui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11"
bevy_pkv = "*"
bevy_egui = "*"

backpack_client_bevy = { path = "../client_bevy" }
shared = { path = "../shared" }
