[package]
name = "example_game_lazy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10"
reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "rustls-tls",
    "cookies",
] }
async-compat = "0.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# bevy_egui = "0.20"
bevy_egui = { git = "https://github.com/DGriffin91/bevy_egui.git", branch = "bevy_main" }
dotenvy = { git = "https://github.com/Vrixyz/dotenvy.git", package = "dotenvy", branch = "try_dotenv_codegen" }
# main while waiting for proc-macro ; Vrixyz to have try_dotenv!
dotenvy_macro = { git = "https://github.com/Vrixyz/dotenvy.git", package = "dotenvy_macro", branch = "try_dotenv_codegen" }
lerp = "0.4.0"
rand = "0.8.5"
bevy_prototype_debug_lines = "0.10"
bevy_jornet = "0.4"
particles = { path = "../particles" }


[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
web-sys = { version = "0.3", features = [
    "Request",
    "Window",
    "Response",
    "Headers",
    "RequestInit",
] }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
