[package]
name = "example_game_lazy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11"
serde = { version = "1.0.156", features = ["derive"] }
serde_json = "1.0.94"
bevy_egui = "0.21"

# dotenvy main while waiting for proc-macro
dotenvy = { git = "https://github.com/allan2/dotenvy.git", package = "dotenvy" }
dotenvy_macro = { git = "https://github.com/allan2/dotenvy.git", package = "dotenvy_macro" }

# Gameplay
bevy_prototype_debug_lines = "0.11.1"
lerp = "0.4.0"
rand = "0.8.5"
bevy_jornet = "0.5"
bevy_pkv = "0.8.0"

# Our stuff
particles = { path = "../particles" }
backpack_client_bevy = { path = "../client_bevy" }
backpack_client_bevy_egui = { path = "../client_bevy_egui" }
shared = { path = "../shared" }


[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2.84", features = ["serde-serialize"] }
web-sys = { version = "0.3.61", features = [
    "Request",
    "Window",
    "Response",
    "Headers",
    "RequestInit",
] }
wasm-bindgen-futures = "0.4.34"
js-sys = "0.3.61"
tracing-wasm = "*"
