[package]
name = "backpack_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "postgres" ] }
tokio = { version = "1", features = ["full"] }
actix-web = "4.1"
actix-web-httpauth = "0.8"
actix-cors = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_dhall = "0.12"
biscuit-auth = "2.2"
uuid = { version = "1.1", features = ["v4", "serde"] }
base64 = "0.21"
rand = "0.8"
dotenv = "0.15.0"
lettre = "0.10"
bcrypt = "0.13"
# Used for oauth process but currently not practical.
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "cookies"] }

secrecy = { version = "0.8", features = ["serde"] }
once_cell = "1.17"

# Telemetry
log = "0.4"
tracing = "0.1.19"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1.1"
thiserror = "1.0.24"

[dev-dependencies]
sqlx = { version = "0.6", default-features = false, features = ["migrate"] }
serde_json = "1"
backpack_client = { path = "../client"}

