[package]
edition = "2021"
name    = "test_ui"
version = "0.1.0"

[dependencies]
# Yew
yew        = { version = "0.20.0", features = ["csr"] }
yew-hooks  = "0.2"
yew-router = "0.17"

reqwest = { version = "0.11.13", features = ["json"] }

dotenv_codegen = "0.15.0"
gloo           = "0.8"
hashbrown      = { version = "0.13", features = ["serde"] }
log            = "0.4"
serde          = { version = "1", features = ["derive"] }
thiserror      = "1"

once_cell   = "1"
parking_lot = "0.12"

# WASM
wasm-bindgen = "0.2"
wasm-logger  = "0.2"

[dependencies.web-sys]
features = ["Document", "Element", "Node", "Window", "HtmlCollection", "HtmlInputElement"]
version  = "0.3"

[dev-dependencies]
gloo-utils           = "0.1.5"
js-sys               = "0.3"
wasm-bindgen-futures = "0.4"
wasm-bindgen-test    = "0.3"
